# retrotrax

./: .gitignore  CMakeLists.txt  README.de.md  README.md  index.html
.github/: FUNDING.yml
.github/workflows/: build.yml
libs/residfp/: FilterModelConfig6581.cpp  FilterModelConfig8580.cpp  siddefs-fp.h
libs/tfmxdecoder/: VENDORED.txt
libs/tfmxdecoder/Chris/: SamplesFile.cpp
src/: AkaiPanel.cpp  AkaiPanel.h  DrumKitPanel.cpp  DrumKitPanel.h  FxPanel.cpp  FxPanel.h  HelpPanel.cpp  HelpPanel.h  IFF8SVXFormat.h  ImportCommon.h  ItImport.h  KeyboardPanel.h  Localisation.h  MasterFxPanel.cpp  MasterFxPanel.h  ModImport.h  Mos6502.h  PatternGrid.cpp  PatternGrid.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RetroLookAndFeel.h  S3mImport.h  STDiskIndex.h  SampleDiskBrowser.cpp  SampleDiskBrowser.h  SampleEditPanel.cpp  SampleEditPanel.h  Sf2Catalog.h  SidChip.h  SidPanel.cpp  SidPanel.h  SidPlayer.h  Soundfont2.h  SpectrumPanel.h  SpeechPanel.cpp  SpeechPanel.h  SpeechSynth.h  (+9 more)
tools/rtx_cli/: main.cpp  test_song.retrotrax
tools/rtx_wasm/: README.md  build.sh  native_test.cpp  player.html  rtx_wasm.cpp  rtx_wasm.js  rtx_wasm.wasm
tools/rtx_wasm/songs/: startrekker-groove.retrotrax
